[package]
name = "pets-citizens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = "0.7.1"
# tokio ={ version = "1.34.0", features = ["full"]}
serde = { version = "1.0.193", default-features = false, features = ["derive", "alloc"] }
# sqlx = { version = "0.7.3" , features = ["postgres", "runtime-tokio"] }
# tower-http = { version = "0.5.0", features = ["cors"] }
csv = "1.3.0"